Test on Layout of Pack Module

--- a/index.html
+++ b/index.html
@@ -634,28 +634,33 @@ title: campout
     <p class="h2 m-h1 stormy caps py-xl">Before Packing Your Bike, Double Check Your List</p>
     <p>First, pick your style:</p>
     <nav class="tabs inline-block rounded overflow-hidden bg-cream border border-brown shadow">
-      <a class="caps bold py-s px-m  pill-l " href="#bikepacker">Bike Packer</a>
-      <a class="caps bold py-s px-m " href="#randolight">Rando Light</a>
-      <a class="caps bold py-s px-m  pill-r " href="#roadtourer">Road Tourer</a>
+      <a class="h5 bold py-s px-s  pill-l " href="#bikepacker">Bike Packer</a>
+      <a class="h5 bold py-s px-s " href="#randolight">Rando Light</a>
+      <a class="h5 bold py-s px-s  pill-r " href="#roadtourer">Road Tourer</a>
     </nav>
     <div id="bikepacker" class="cf">
 
-        <div class="col col-12 m-col-6 p-m">
-          <img src="img/2017_SC_bikepacker_01.jpg" alt="">
-          <ol class="text-left">
-            <li><a href="">Item</a></li>
-            <li><a href="">Item</a></li>
-            <li><a href="">Item</a></li>
-          </ol>
+        <div class="relative col-12 s-col-6 mx-auto py-s">
+            <img class="fit" src="img/2017_SC_bikepacker_01.jpg" alt="">
         </div>
-        <div class="col col-12 m-col-6 p-m">
+        <div class="col-12  py-s">
           <img src="img/2017_SC_bikepacker_02.jpg" alt="">
-          <ol class="text-left">
-            <li><a href="">Item</a></li>
-            <li><a href="">Item</a></li>
-            <li><a href="">Item</a></li>
-          </ol>
         </div>
+          <ol class="text-left cf h5">
+            <li class="col col-12 s-col-6"><a href="http://www.enlightenedequipment.com/">Enlightened Equipment Quilt</a></li>
+            <li class="col col-12 s-col-6"><a href="http://builtbyswift.com/shop/ultralight-mat/">Sea To Summit Ultralight Mat</a></li>
+            <li class="col col-12 s-col-6"><a href="http://builtbyswift.com/shop/sea-to-summit-escapist-tarp/">Sea To Summit Escapist Tarp</a></li>
+            <li class="col col-12 s-col-6"><a href="http://builtbyswift.com/shop/collapsible-pour-over-coffee-brewer/">Snow Peak Collapsable Pour Over</a></li>
+            <li class="col col-12 s-col-6"><a href="http://builtbyswift.com/shop/snow-peak-gigapower-auto-stove/">Snow Peak GigaPower Auto Stove</a></li>
+            <li class="col col-12 s-col-6"><a href="http://builtbyswift.com/product-category/collections/cascade-collection/">Swift Cascade Series Water Bottle</a></li>
+            <li class="col col-12 s-col-6"><a href="https://www.ovejanegrabikepacking.com/collections/handlebar-bags/products/lunchbox-handlebar-bag">Oveja Negra Lunchbox</a></li>
+            <li class="col col-12 s-col-6"><a href="http://builtbyswift.com/shop/teton-package/">Tenkara Fishing Rod</a></li>
+            <li class="col col-12 s-col-6"><a href="https://www.ovejanegrabikepacking.com/collections/handlebar-bags/products/front-end-loader">Oveja Negra Front End Loader</a></li>
+            <li class="col col-12 s-col-6"><a href="https://www.ovejanegrabikepacking.com/collections/seat-bags/products/gearjammer-seat-bag">Oveja Negra Gearjammer Seat Bag</a></li>
+            <li class="col col-12 s-col-6"><a href="https://www.ovejanegrabikepacking.com/collections/handlebar-bags/products/chuckbucket-handlebar-bag">Oveja Negra Chuckbucket</a></li>
+            <li class="col col-12 s-col-6"><a href="http://builtbyswift.com/product-category/bags/adventure-organizing-bags/">Swift Wanderlust Packers</a></li>
+          </ol>
+
 
     </div>
     <div id="randolight" class="cf">
@@ -697,6 +702,7 @@ title: campout
         </div>
 
     </div>
+    <hr class="brown my-m">
     <h2>Don't have bike bags?</h2>
     <p><a href="http://builtbyswift.com/shop" class="caps">builtbyswift.com/shop</a></p>
   </div>
