--- a/index.html
+++ b/index.html
@@ -629,10 +629,10 @@ title: campout
 
 
 <section id="pack" class="relative z1 max-width-xl mx-auto px-l cf" >
-  <div class="absolute z2 right-0 left-0 shadow-high text-center py-xl px-l bg-poppy white" style="top:50%; transform:translateY(-50%);">
+  <div class="absolute z2 right-0 left-0 shadow-high text-center py-l px-l bg-poppy white" style="top:50%; transform:translateY(-50%);">
     <h2 class="h3 caps bold">Friendly Reminder</h2>
-    <p class="h2 m-h1 stormy caps py-xl">Before Packing Your Bike, Double Check Your List</p>
-    <p>First, pick your style:</p>
+    <p class="h2 m-h1 stormy caps">Before Packing Your Bike <br> Double Check Your List</p>
+    <p class="brown">First, pick your style:</p>
     <nav class="tabs inline-block rounded overflow-hidden bg-cream border border-brown shadow">
       <a class="h5 bold py-s px-s  pill-l " href="#bikepacker">Bike Packer</a>
       <a class="h5 bold py-s px-s " href="#randolight">Rando Light</a>
@@ -643,7 +643,7 @@ title: campout
         <div class="relative col-12 s-col-6 mx-auto py-s">
             <img class="fit" src="img/2017_SC_bikepacker_01.jpg" alt="">
         </div>
-        <div class="col-12  py-s">
+        <div class="col-12 py-s">
           <img src="img/2017_SC_bikepacker_02.jpg" alt="">
         </div>
           <ol class="text-left cf h5">
