Fix margin on map BG

--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@ title: campout
   </div>
 </div> -->
 
-<section id="signup" class="text-center pb-xl px-l">
+<section id="signup" class="text-center pb-xl">
   <div class="circle wow fadeIn border border-olive olive mx-auto mb-l number-node">
     <span class="wow zoomIn sans text-center block pt-s h1 bold">03</span>
   </div>
   <h2 class="h3 caps bold olive">How do I Join?</h2>
   <!-- <p class="h1 caps stormy pb-l olive px-xl">  </p> -->
-  <div class="measure serif mx-auto pb-l text-left">
+  <div class="measure serif mx-auto pb-l px-l text-left">
     <p class="h3"> Answer, Sign in, pack up and skip town. We love it if you've cycled from the Arctic Circle to Patagonia, and we're even more excited if you've never dreamed of camping by bicycle before. </p>
   </div>
 <div class="bg-olive p-l" style="background-image:url(img/map.jpg)">
