Images added for black river and march callouts

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@ title: campout
       <span class="wow zoomIn sans text-center block pt-s h1 bold">01</span>
     </div>
     <h2 class="h3 caps bold brown">What is it?</h2>
-    <!-- <p class="h2 type-grow caps stormy py-l">A global celebration.</p> -->
   </div>
   <div class="measure serif mx-auto pb-l text-left">
     <p class="h3">Swift Campout is a global call to go bike-camping on June 24th, 2017. For the third year in a row thousands of adventurous spirits will load camping gear on their bikes for a weekend adventure.</p>
@@ -419,18 +418,27 @@ title: campout
       <!-- <p class="h3"> Plan your route, check your list and pack your bags! We highly recommend <a href="http://blackriver.cc" class=" border-bottom-thin">blackriver.cc</a> for route info and mapping tools, and <a href="http://builtbyswift.com/shop/campout" class=" border-bottom-thin">builtbyswift.com/shop/campout</a> for our campout-specific merch. </p> -->
     </div>
   </div>
-  <div class="bg-poppy px-m cf pb-xl">
+  <div class=" px-m cf pb-xl">
     <div class="text-center pt-l pb-xxl  px-m col-12 l-col-10 mx-auto white">
       <div class="col col-12 m-col-6 p-m">
-        <h3>Plan Your Route</h3>
-
-        <p> BlackRiver.cc/ </p>
+        <div class="max-width-s mx-auto border-top-thin poppy">
+          <a href="https://www.blackriver.cc/rides/6660">
+            <img src="img/blackriver_logo.gif" alt="">
+          </a>
+        </div>
+        <h3 class="brown">Pick Your Route</h3>
+        <p class="h3 serif brown">Check out our route on Blackriver.cc, or make your own.</p>
+        <p class="mt-l"><a href="https://www.blackriver.cc/rides/6660" class="button bg-poppy brown">Plan a Route</a></p>
       </div>
       <div class="col col-12 m-col-6 p-m">
-        <h3>Pack Your Bags</h3>
-        <a href="http://builtbyswift.com/shop/campout-2017">
-          <img src="img/campout_merch.jpg" alt="">
-        </a>
+        <div class="max-width-s mx-auto border-top-thin poppy">
+          <a href="http://builtbyswift.com/shop/campout-2017">
+            <img src="img/campout_merch.jpg" class="" alt="">
+          </a>
+        </div>
+        <h3 class="brown">Pack Your Bags</h3>
+        <p class="h3 serif brown">Check out this years campout merch in our web store.</p>
+        <p class="mt-l"><a href="https://builtbyswift.com/shop/campout-2017" class="button bg-poppy brown">Shop Campout</a></p>
       </div>
     </div>
   </div>
